# miloco-camera

./: .drone.yml  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.gpu.yaml  docker-compose.yaml  k8s-deploy.yaml  mediamtx.yml  pyproject.toml
.github/workflows/: build-windows-exe.yml  docker-publish-cpu.yml  docker-publish-gpu.yml
app/: config.py  database.py  main.py
app/adapters/: __init__.py  base.py  rtsp.py  xiaomi.py
app/api/: alerts.py  cameras.py  detections.py  streams.py  system.py  web_routes.py
app/detectors/: base.py  opencv_detector.py  yolo_detector.py
app/models/: __init__.py  alert.py  camera.py  detection.py
app/services/: alert_service.py  camera_service.py  detection_service.py  notify_service.py  rtsp_service.py  token_service.py
app/web/static/js/: app.js
app/web/templates/: alerts.html  base.html  cameras.html  detections.html  monitor.html  streams.html
examples/: mcp_server.py  rtsp.py  rtsp_includes_audio.py  stream_to_audio.py  stream_to_jpg.py  stream_to_video.py  stream_to_video_test.py  stream_with_audio.py  web_stream.py  yolo.py
miloco_sdk/: __init__.py  __main__.py  base.py
miloco_sdk/cli/: __init__.py  config.py  llm.py  mcp_tool.py  utils.py
miloco_sdk/configs/: __init__.py
miloco_sdk/plugin/: authorize.py  home.py
miloco_sdk/plugin/miot/: camera.py  client.py  cloud.py  lan.py  mIot_camera_status.py  mIot_camera_stream.py  network.py
miloco_sdk/utils/: common.py  const.py  decoder.py  error.py  mcp_jsonrpc.py  types.py
tests/: test_authorize.py  test_camera_status.py  test_camera_stream.py  test_home.py
