[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miloco-sdk"
version = "0.1.0"
description = "Xiaomi Miloco SDK for Python"
readme = "README.md"
authors = [
    {name = "dairoot", email = "623815825@qq.com"},
    {name = "Xiaomi Corporation"}
]
requires-python = ">=3.12"
license = {text = "Xiaomi Miloco License Agreement"}
keywords = ["xiaomi", "miloco", "sdk", "iot", "camera"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "qrcode==8.2",
    "fastmcp>=2.14.1",
    "openai>=1.0.0",
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "cryptography>=3.4.0",
    "av>=10.0.0",
    "Pillow>=9.0.0",
    "PyYAML>=6.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/dairoot/miloco-sdk"
Repository = "https://github.com/dairoot/miloco-sdk"
Issues = "https://github.com/dairoot/miloco-sdk/issues"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
"miloco_sdk" = [
    "libs/**/*.dylib",
    "libs/**/*.so",
    "configs/**/*.yaml",
    "configs/**/*.yml",
]

[tool.setuptools.package-dir]
"" = "."

[tool.mypy]
exclude = [
    "tests/",
    "miloco_sdk/plugin/miot/",
]
ignore_missing_imports = true
